# some-platformer

./: .gitignore  Cargo.toml
client/: Cargo.toml
client/src/: gameworld.rs  main.rs  sys_render.rs
client/src/drawable/: mod.rs  rect_drawable.rs
lib/: Cargo.toml
lib/src/: lib.rs  types.rs
lib/src/collision/: collision_handling.rs  mod.rs
lib/src/components/: collider.rs  drawable.rs  mod.rs  moving.rs  rect_drawable.rs  transform.rs
lib/src/entities/: game_entity.rs  mod.rs  player.rs  test_block.rs
lib/src/entities/ground/: ground.rs  mod.rs
lib/src/entities/player/: mod.rs  player.rs
lib/src/resources/: delta_time.rs
lib/src/sync/: codec.rs  message.rs
lib/src/systems/: mod.rs  sys_colliding.rs  sys_moving.rs  sys_render.rs
lib/src/world/: gameworld.rs  mod.rs
server/: Cargo.toml
server/src/: game.rs  main.rs
server/src/sync/: mod.rs  peer.rs  shared.rs  state.rs
src/: lib.rs  main.rs
src/components/: mod.rs  moving.rs  rect_drawable.rs  transform.rs
src/entities/: game_entity.rs  mod.rs
src/entities/player/: player.rs
src/resources/: delta_time.rs  mod.rs
src/systems/: mod.rs  sys_moving.rs  sys_render.rs
src/world/: gameworld.rs  mod.rs
