[package]
name = "some_platformer_lib"
version = "0.1.0"
authors = ["Grégory OBANOS <gregory.obanos@gmail.com>"]

[dependencies]
specs = "*"
nalgebra = "*"
time = "*"

log = "*"

tokio = "*"
tokio-io = "*"
futures = "*"
bytes = "*"

serde = "*"
serde_derive = "*"
serde_json = "*"

# TODO: Move to client only
ggez = "*"
