[package]
name = "some_platformer_lib"
version = "0.1.0"
authors = ["Grégory OBANOS <gregory.obanos@gmail.com>",
            "Olivier PINON <oliv.pinon@gmail.com"]

[dependencies]
specs = "*"
nalgebra = "*"
ncollide = "*"
time = "*"
log = "*"
tokio = "*"
tokio-io = "*"
futures = "*"
bytes = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"