[package]
name = "some_platformer_lib"
version = "0.1.0"
authors = ["Grégory OBANOS <gregory.obanos@gmail.com>",
            "Olivier PINON <oliv.pinon@gmail.com"]

[dependencies]
specs = "0.10.0"
nalgebra = "0.14.1"
ncollide = "0.14.1"
time = "0.1.39"
log = "0.4.1"
bytes = "0.4.6"

tokio = "0.1.5"
tokio-io = "0.1.6"
futures = "0.1.21"

serde = "1.0.43"
serde_derive = "1.0"
serde_json = "1.0"